# HaXPath

./: .gitignore  CHANGELOG.md  HaXPath.cabal  LICENSE  README.md  stack.yaml
doc/: HaXPath-Operators.html  HaXPath-Schematic-HTML.html  HaXPath-Schematic-Operators.html  HaXPath-Schematic.html  HaXPath-Typed.html  HaXPath.haddock  HaXPath.html  HaXPath.txt  doc-index.html  doc-index.json  index.html
doc/src/: HaXPath.Operators.html  HaXPath.Schematic.HTML.html  HaXPath.Schematic.Operators.html  HaXPath.Schematic.html  HaXPath.Typed.html  HaXPath.html
examples/: Main.hs
examples/HaXPath/: Examples.hs
examples/HaXPath/Schematic/: Examples.hs
src/: HaXPath.hs
src/HaXPath/: Operators.hs  Schematic.hs  Typed.hs
src/HaXPath/Schematic/: HTML.hs  Operators.hs
test/: Spec.hs
test/HaXPath/: Test.hs
test/HaXPath/Schematic/: Test.hs
