cabal-version: 1.12

name:           HaXPath
version:        0.1.0.0
description:    XPath-generating embedded domain specific language.
homepage:       https://github.com/hgrano/HaXPath
bug-reports:    https://github.com/hgrano/HaXPath/issues
author:         Huw Grano
maintainer:     huw.grano@gmail.com
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/hgrano/HaXPath

library
  exposed-modules:
      HaXPath
    , HaXPath.Operators
    , HaXPath.Schematic
    , HaXPath.Schematic.HTML
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror -O
  build-depends:
      base >= 4.6 && < 5
    , text >= 0.11.3
  default-language: Haskell2010

test-suite goat-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HaXPath.Test
  hs-source-dirs:
      test
  ghc-options: -Wall -Werror -O
  build-depends:
      HaXPath
    , HUnit
    , base >= 4.6 && < 5
  default-language: Haskell2010
