cabal-version: 1.12

name:            HaXPath
version:         0.2.0.0
description:     XPath-generating embedded domain specific language.
homepage:        https://github.com/hgrano/HaXPath
bug-reports:     https://github.com/hgrano/HaXPath/issues
author:          Huw Grano
maintainer:      huw.grano@gmail.com
category:        XML
build-type:      Simple
license:         BSD3
license-file:    LICENSE
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/hgrano/HaXPath

library
  exposed-modules:
      HaXPath
    , HaXPath.Operators
    , HaXPath.Schematic
    , HaXPath.Schematic.Operators
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror -O
  build-depends:
      base >= 4.6 && < 5
    , HList >= 0.4.0.0 && < 0.6.0.0
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HaXPath.Test
    , HaXPath.Schematic.Test
  hs-source-dirs:
      test
  ghc-options: -Wall -Werror -O
  build-depends:
      base
    , bytestring >= 0.11.1.0
    , HaXPath
    , HUnit
    , text
  default-language: Haskell2010

test-suite examples
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      HaXPath.Examples
    , HaXPath.Schematic.Examples
  build-depends:
      base
    , HaXPath
  hs-source-dirs:
      examples
  ghc-options: -Wall -Werror -O
  default-language: Haskell2010
